--- a/src/stylesheets/app.scss
+++ b/src/stylesheets/app.scss
@@ -10,3 +10,39 @@
     height: 11px;
   }
 }
+
+.search-icon {
+  cursor: pointer;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  right: 0px;
+  z-index: 1;
+  top: 8px;
+}
+
+.c-txt-sm .c-txt__input {
+  min-height:32px;
+  padding: 8px;
+}
+
+.results-count {
+  padding: 10px 0;
+  font-size: 12px;
+  font-style: italic;
+  text-align: center;
+  color: #999;
+}
+
+.results-table {
+  border-collapse: collapse;
+
+  tr {
+    height: 50px;
+    border-top: 1px solid #dddddd;
+  }
+
+  .date {
+    font-size: 12px;
+  }
+}
